# Depth-Cost-Trade-off-Analysis-of-QAOA-under-Topology-and-Noise-Constraints

./: README.md  check_environment.py  pyproject.toml  requirements.txt
configs/: cv.yaml  quick.yaml
results/cv/: classical_baselines.csv  classical_baselines_summary.csv  noise_results.csv  qaoa_results.csv  results_manifest.json  summary_by_depth.csv  summary_by_depth_optimizer.csv  summary_by_noise_depth_optimizer.csv  summary_by_topology_depth.csv  summary_marginal_depth_cost.csv  topology_metrics.csv
scripts/: make_figures.py  run_all_quick.py  run_experiment.py
src/qaoa_dtn/analysis/: plots.py  tables.py
src/qaoa_dtn/experiment/: runner.py
src/qaoa_dtn/qaoa_core/: circuit.py  evaluator.py  graphs.py  hardware.py  maxcut.py  noise.py  optimizers.py
src/qaoa_dtn/utils/: config.py  io.py
src/qaoa_dtn_study.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
